@@ -35,7 +35,7 @@ private:
 	}
     };
     tcpdemux(const tcpdemux &t) __attribute__((__noreturn__)) :outdir("."),flow_counter(),packet_counter(),xreport(),
-        max_fds(),flow_map(),openflows(),stored_flow_map(),stored_flows(),start_new_connections(),opt(),fs(){
+        max_fds(),flow_map(),openflows(),saved_flow_map(),saved_flows(),start_new_connections(),opt(),fs(){
 	throw new not_impl();
     }
     tcpdemux &operator=(const tcpdemux &that){
@@ -52,9 +52,9 @@ private:
     } flow_addr_key_eq;
 
     typedef std::tr1::unordered_set<class tcpip *> tcpset;
-    typedef std::tr1::unordered_set<class stored_flow *> storedflowset;
+    typedef std::tr1::unordered_set<class saved_flow *> saved_flowset;
     typedef std::tr1::unordered_map<flow_addr,tcpip *,flow_addr_hash,flow_addr_key_eq> flow_map_t; // active flows
-    typedef std::tr1::unordered_map<flow_addr,stored_flow,flow_addr_hash,flow_addr_key_eq> stored_flow_map_t; // flows that have been stored
+    typedef std::tr1::unordered_map<flow_addr,saved_flow,flow_addr_hash,flow_addr_key_eq> saved_flow_map_t; // flows that have been saved
     tcpdemux();
 public:
     /* The pure options class means we can add new options without having to modify the tcpdemux constructor. */
@@ -90,13 +90,13 @@ public:
     flow_map_t	flow_map;		// db of open tcpip objects, indexed by flow
     tcpset	openflows;		// the tcpip flows with open files
 
-    stored_flow_map_t stored_flow_map;  // db of stored flows, indexed by flow
-    storedflowset     stored_flows;     // the flows that were stored
+    saved_flow_map_t saved_flow_map;  // db of saved flows, indexed by flow
+    saved_flowset    saved_flows;     // the flows that were saved
     bool	start_new_connections;	// true if we should start new connections
     options	opt;
     class       feature_recorder_set *fs; // where features extracted from each flow should be stored
     
-    static int        max_stored_flows;       // how many stored flows are kept in the stored_flow_map
+    static int        max_saved_flows;       // how many saved flows are kept in the saved_flow_map
     static tcpdemux *getInstance();
 
     /* management of open fds and in-process tcpip flows*/
@@ -113,6 +113,12 @@ public:
     /* vlans are signed int; -1 means no vlan */
     tcpip *create_tcpip(const flow_addr &flow, int32_t vlan,tcp_seq isn, const timeval &ts);
     tcpip *find_tcpip(const flow_addr &flow);
+
+    /* saved flows are completed flows that we remember in case straggling packets
+     * show up. Remembering the flows lets us resolve the packets rather than creating
+     * new flows.
+     */
+    void  save_flow(tcpip *);
 
     /* packet processing */
     void  process_tcp(const struct timeval &ts,const u_char *data, uint32_t length,
